# CoinPurse

./: .gitignore  CoinPurse.sln  README.md  package-lock.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
CoinPurseApi/: CoinPurseApi.csproj  CoinPurseApi.http  Program.cs
CoinPurseApi/Controllers/: AccountController.cs  BalanceController.cs  InstitutionController.cs  PeriodController.cs
CoinPurseApi/Data/: CoinPurseDbContext.cs
CoinPurseApi/Dtos/: AccountBalanceDto.cs  AccountDto.cs  BalanceDto.cs  BulkBalanceUpdateDto.cs  CreateAccountBalanceDto.cs  CreateAccountDto.cs  CreateBalanceDto.cs  CreateInstitutionDto.cs  CreatePeriodDto.cs  CreatePeriodForMonthDto.cs  EntityMappingExtensions.cs  InstitutionDto.cs  PeriodDto.cs  UpdateAccountDto.cs  WeeklyBalancePromptDto.cs
CoinPurseApi/Migrations/: 20250105172508_UpdateBalance.Designer.cs  CoinPurseDbContextModelSnapshot.cs
CoinPurseApi/Models/: Account.cs  AccountBalance.cs  AccountPeriod.cs  Balance.cs  Institution.cs  Period.cs
CoinPurseApi/Properties/: launchSettings.json
CoinPurseApi/Services/: AccountService.cs  BalanceService.cs  IAccountService.cs  IBalanceService.cs  IInstitutionService.cs  IPeriodService.cs  InstitutionService.cs  PeriodService.cs
CoinPurseApi/Services/Interfaces/: IBalanceService.cs  IInstitutionService.cs  IPeriodService.cs
coinpurse-net/: .gitignore
coinpurse-net/CoinPurseApi/: appsettings.Development.json
coinpurse-net/CoinPurseApi/Controllers/: AccountController.cs  InstitutionController.cs  PeriodController.cs
coinpurse-net/CoinPurseApi/Data/: CoinPurseDbContext.cs
coinpurse-net/CoinPurseApi/Dtos/: AccountBalanceDto.cs  CreateAccountBalanceDto.cs  CreateAccountDto.cs  CreateBalancesForDateDto.cs  CreateBalancesForMonthDto.cs
coinpurse-net/CoinPurseApi/Migrations/: 20241202073551_InitialCreate.Designer.cs  20241202073551_InitialCreate.cs  (+4 more)
coinpurse-net/coinpurse.client/: eslint.config.js  tsconfig.node.json
coinpurse-py/: .editorconfig  AGENTS.md  CLAUDE.md  UI_RESTRUCTURE_PLAN.md  coinpurse.code-workspace  transaction_screen_plan.md
coinpurse-py/backend/: .gitignore  database.py  main.py  models.py  pyproject.toml  requirements.txt  test_db.py
coinpurse-py/backend/models/: __init__.py  account.py  app_setting.py  balance.py  base.py  category.py  category_mapping.py  import_batch.py  import_template.py  institution.py  transaction.py
coinpurse-py/backend/repositories/: account_repository.py  app_setting_repository.py  balance_repository.py  category_mapping_repository.py  category_repository.py  import_batch_repository.py  import_template_repository.py  institution_repository.py  transaction_repository.py
coinpurse-py/backend/respositories/: balance_repository.py  institution_repository.py
coinpurse-py/backend/routers/: accounts_router.py  balances_router.py  categories_router.py  import_router.py  institutions_router.py  settings_router.py  transactions_router.py
coinpurse-py/backend/schemas/: account.py  app_setting.py  balance.py  category.py  category_mapping.py  import_batch.py  import_template.py  institution.py  transaction.py
coinpurse-py/backend/services/: __init__.py  balance_aggregation_service.py  category_mapper.py  duplicate_detector.py  import_service.py
coinpurse-py/backend/services/parsers/: __init__.py  base_parser.py  csv_parser.py  excel_parser.py
coinpurse-py/backend/tests/: __init__.py  conftest.py
coinpurse-py/backend/tests/integration/routers/: __init__.py  test_accounts_router.py  test_import_router.py  test_transactions_router.py
coinpurse-py/backend/tests/unit/repositories/: __init__.py  test_account_repository.py  test_category_mapping_repository.py
coinpurse-py/backend/tests/unit/services/: __init__.py  test_category_mapper.py  test_duplicate_detector.py
coinpurse-py/backend/tests/unit/services/parsers/: __init__.py  test_csv_parser.py  test_excel_parser.py
coinpurse-py/coinpurse-client/: .gitignore  .prettierignore  .prettierrc.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
coinpurse.client/: coinpurse.client.esproj  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
coinpurse.client/src/: Accounts.tsx  App.css  App.tsx  DashboardPage.tsx  FinancialChart.tsx  SettingsPage.tsx  main.tsx
(+490 files in other folders)
