[project]
name = "coinpurse-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "sqlalchemy==2.0.49",
    "pydantic[email]==2.12.5",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.24",
    "pandas==3.0.2",
    "openpyxl==3.1.5",
    "httpx==0.28.1",
    "scalar-fastapi==1.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "coverage==7.13.5",
    "ruff==0.15.9",
]

[tool.ruff]
# Target Python 3.13
target-version = "py313"

# Set line length to match Prettier
line-length = 88

# Enable auto-fixing
fix = true

[tool.ruff.lint]
# Enable common linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore some rules that conflict with FastAPI patterns
ignore = [
    "B008", # Allow function calls in default arguments (needed for FastAPI Depends)
]

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["models", "schemas", "repositories", "routers"]

[tool.ruff.format]
# Use double quotes (consistent with FastAPI style)
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix line endings
line-ending = "lf"
